Improve settings & Update webrtc stuff
Signed-off-by: Mario Danic <mario@lovelyhq.com>